--- a/public/index.html
+++ b/public/index.html
@@ -3,111 +3,169 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Times+New+Roman">
-    <link href="https://fonts.googleapis.com/css2?family=Times+New+Roman&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>EDD-project</title>
+    <title>StreamFlix</title>
+    <link rel="stylesheet" href="css/styles.css"></link>
+    <link rel="icon" href="images/codewriter.ico" type="image/x-icon">
 </head>
 
 <body>
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">MindScript.com</a>
-        <ul class="navbar-nav ">
-            <li class="nav-item ">
-                <a class="nav-link active" href="#home">Home</a>
+    <div class="header">
+        <nav>
+            <img src="images/codewriter.png" alt="logo" class="logo">
+            <div>
+                <button class="lang-btn">English <img src="images/down-icon.png"></button>
+                <a href="/login"><button>
+                    Login
+                </button></a>
+            </div>
+
+        </nav>
+        <div class="header-content">
+            <h1>Unlimited Movies, Tv shows and more.</h1>
+            <h3>Watch anywhere. Cancel anytime.</h3>
+            <p>Ready to stream ? Click on the button to create an account or to buy a subscription.</p>
+            <a href="/signup"><button>
+                Get Started
+            </button></a>
+        </div>
+    </div>
+    <div class="features">
+        <div class="row">
+            <div class="text-col">
+                <h2>Enjoy on your TV</h2>
+                <p>Watch on smart TVs , PlayStation, Xbox, Chromecast, Apple TV ,BLU-ray players and more.</p>
+
+            </div>
+            <div class="img-col">
+                <img src="images/feature-1.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img-col">
+                <img src="images/feature-2.png" alt="">
+            </div>
+            <div class="text-col">
+                <h2>Download your shows to watch offline.</h2>
+                <p>Save your favourites easily and always have something to watch.</p>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="text-col">
+                <h2>Watch everywhere</h2>
+                <p>Stream unlimited movies and TV shows on your phone,tablet,laptop, and TV.</p>
+
+            </div>
+            <div class="img-col">
+                <img src="images/feature-3.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img-col">
+                <img src="images/feature-4.png" alt="">
+            </div>
+            <div class="text-col">
+                <h2>Create profiles for children.</h2>
+                <p>Send children on adventures with their favourite characters in a space made just for them-Free with
+                    your memebership.</p>
+            </div>
+        </div>
+    </div>
+    <div class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <ul class="accordion">
+            <li>
+                <input type="radio" name="accordion" id="first">
+                <label for="first">What is StreamFlix ?</label>
+                <div class="content">
+                    <p> StreamFlix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime,
+                        documentaries and more – on thousands of internet-connected devices.
+
+                        You can watch as much as you want, whenever you want, without a single ad – all for one low
+                        monthly price. There's always something new to discover, and new TV shows and movies are added
+                        every week!</p>
+                </div>
             </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="#Features">Features</a>
+            <li>
+                <input type="radio" name="accordion" id="second">
+                <label for="second">How much does StreamFlix Cost?</label>
+                <div class="content">
+                    <p>Watch StreamFlix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one
+                        fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.</p>
+
+                </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#supports">supports</a>
+            <li>
+                <input type="radio" name="accordion" id="third">
+                <label for="third">Where can I watch?</label>
+                <div class="content">
+                    <p>Watch anywhere, anytime. Sign in with your StreamFlix account to watch instantly on the web at
+                     StreamFlix.com from your personal computer or on any internet-connected device that offers the
+                     StreamFlix app, including smart TVs, smartphones, tablets, streaming media players and game
+                        consoles.
+
+                        You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use
+                        downloads to watch while you're on the go and without an internet connection. Take StreamFlix with
+                        you anywhere.</p>
+
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="accordion" id="fourth">
+                <label for="fourth">How can I cancel?</label>
+                <div class="content">
+                    <p> StreamFlix is flexible. There are no annoying contracts and no commitments. You can easily cancel
+                        your account online in two clicks. There are no cancellation fees – start or stop your account
+                        anytime.</p>
+                </div>
+            </li>
+            <li>
+                <input type="radio" name="accordion" id="fifth">
+                <label for="fifth">What can I watch on StreamFlix?</label>
+                <div class="content">
+                    <p> StreamFlix has an extensive library of feature films, documentaries, TV shows, anime, award-winning
+                     StreamFlix originals, and more. Watch as much as you want, anytime you want.</p>
+                </div>
             </li>
         </ul>
-        <ul class="navbar-nav ml-auto leftal">
-            <li class="nav-item space">
-            <a href="/login"><button class="btn btn-outline-light">Log In</button></a>
-            </li>
-            <li class="nav-item space">
-                <a href="/signup"><button class="btn btn-outline-light">Sign Up</button></a>
-            </li>
-        </ul>
-    </nav>
-    <section id="home">
-        <div class="homepage">
-            <h1><img src="images/codewriter.png" class="img1">MindScript</h1>
-            <p class="brand-line">The Programming Assistant</p>
+        <small>Ready to stream ? Click on the button to create an account or to buy a subscription.</small>
+        <a href="/signup"><button>
+            Get Started
+        </button></a>
+    </div>
+    <div class="footer">
+      <h2>Questions ? call 000-600-595-876</h2>
+      <div class="row">
+        <div class="col">
+            <a href="#" >FAQ</a>
+            <a href="#" >Investor Relations</a>
+            <a href="#" >Privacy</a>
+            <a href="#" >Speed Test</a>
 
-            <p class="hometext">"Don't know to code ? Write a prompt & get the code"</p>
         </div>
-    </section>
-
-    <section id="Features">
-        <div class="aboutpage">
-            <div class="feat">
-                <i class="fas fa-check-circle"></i>
-                <h3>User friendly</h3>
-                <p>No developer experience needed to use </p>
-
-            </div>
-            <div class="feat">
-                <i class="fas fa-bullseye"></i>
-                <h3>Precise codes</h3>
-                <p>Get the most precise codes for projects</p>
-            </div>
-            <div class="feat">
-                <i class="fas fa-bolt"></i>
-                <h3>Fast </h3>
-                <p>Translate or get code in seconds</p>
-            </div>
-            <div class="feat">
-                <i class="fas fa-expand-arrows-alt"></i>
-                <h3>Flexible</h3>
-                <p>Generate code in any language</p>
-            </div>
+        <div class="col">
+            <a href="#" >Help Center</a>
+            <a href="#" >Jobs</a>
+            <a href="#" >Cookies Preference</a>
+            <a href="#" >Legal Notices</a>
         </div>
-    </section>
-    <section id="supports">
-        <div class="supported">
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3"></i>
-            <i class="fab fa-js-square"></i>
-            <i class="fab fa-python"></i>
-            <i class="fas fa-gem"></i>
-            <i class="fab fa-java"></i>
-            <i class="fab fa-cuttlefish"></i>
-            <i class="fab fa-php"></i>
-            <i class="fab fa-swift"></i>
-            <i class="fas fa-rust"></i>
+        <div class="col">
+            <a href="#" >Account</a>
+            <a href="#" >Ways to watch</a>
+            <a href="#" >Corporate Information</a>
+            <a href="#" >Only on StreamFlix</a>
         </div>
-    </section>
-
-    <section id="create-account">
-        <div class="ca">
-        <h2>Join us Today!</h2>
-     <a href="/signup"><button class="btn  btn-outline-light">Create Account</button></a>
-     </div>
-    </section>
-
-    <footer id="copyright">
-      <p></p>
-    </footer>
-    <script src="https://kit.fontawesome.com/381b0ff362.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+        <div class="col">
+            <a href="#" >Media Centre</a>
+            <a href="#" >Terms of Use</a>
+            <a href="#" >Contact Us</a>
+            
+        </div>
+      </div>
+     <button class="lang-btn">English <img src="images/down-icon.png"></button>
+     <p class="copyright-text"> StreamFlix India</p>
+    </div>
 </body>
 
 </html>
