--- a/public/login.html
+++ b/public/login.html
@@ -8,31 +8,44 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles2.css">
-    <title>Login MindScript</title>
+    <title>StreamFlix Login</title>
 </head>
 
 <body>
-    <form method="POST" action="/login">
-        <img src="images/codewriter.png">
-        <h1>Log in to MindScript</h1>
-        <input hidden type="text" id="visitorId" name="visit" value="">
-        <input type="email" placeholder="Your email" class="email" id="email" name="email" required>
-        <input type="password" placeholder="Passsword" id="password" name="password" required>
-        <input class="btn btn-lg btn-light" type="submit" value="Submit">
-    </form>
+    <div class="logo">
+        <img src="images/codewriter.png" alt="">
+    </div>
+    <div class="container">
+        <h1>Log In</h1>
+        <div class="form">
+            <form method="POST" action="/login">
+                <input hidden type="text" id="visitorId" name="visit" value="">
+                <input type="email" placeholder="Your email" class="email" id="email" name="email" required>
+                <input type="password" placeholder="Passsword" id="password" name="password" required>
+                <input class="btn btn-lg btn-light" type="submit" value="Submit">
+                <input type="checkbox">
+                <label>Remember Me</label>
+                <a href="#">Need Help?</a>
+            </form>
+        </div>
+        <div class="content">
+            <h2>New to StreamFlix?<a href="/signup"> Sign Up Now</a></h2>
+        </div>
+    </div>
+
     <script>
         // Initialize the agent once at web application startup.
         // Alternatively initialize as early on the page as possible.
         const fpPromise = import('https://fpjscdn.net/v3/mhvKGtvOrTg6eDiLLO3c')
-          .then(FingerprintJS => FingerprintJS.load())
-      
+            .then(FingerprintJS => FingerprintJS.load())
+
         // Analyze the visitor when necessary.
         fpPromise
-          .then(fp => fp.get())
-      .then(result => 
-             document.getElementById("visitorId").value=result.visitorId
-          )
-      </script>
+            .then(fp => fp.get())
+            .then(result =>
+                document.getElementById("visitorId").value = result.visitorId
+            )
+    </script>
 </body>
 
 </html>
